--- a/favorability_chart.html
+++ b/favorability_chart.html
@@ -18,7 +18,7 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-  <a href="https://scmcqueen.github.io/si649_hw/reviews_by_char.csv" target="_blank">Download Data</a>
+  <a href="https://scmcqueen.github.io/si649_hw/reviews_by_char.csv">Data</a>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
