--- a/favorability_chart.html
+++ b/favorability_chart.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div id="vis"></div>
-  <a href="https://raw.githubusercontent.com/Feiting-Li-Git/Feiting-Li-SI649/main/data.csv" target="_blank">Download Data
+  <a href="https://raw.githubusercontent.com/Feiting-Li-Git/Feiting-Li-SI649/main/data.csv" target="_blank">Download Data</a>
   
   <script>
     (function(vegaEmbed) {
@@ -40,6 +40,5 @@
     })(vegaEmbed);
 
   </script>
-</a>
 </body>
 </html>
